--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+p {
+  @apply text-pretty
 }
-
-@media (prefers-color-scheme: dark) {
+h1,h2,h3,h4,h5 {
+  @apply text-balance
+}
+img {
+  @apply h-auto max-w-full
+}
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+    --radius: 0.5rem}}
