--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ h1,h2,h3,h4,h5 {
   @apply text-balance
 }
 img {
-  @apply h-auto max-w-full
+  @apply h-auto max-w-full border-none
 }
 @layer base {
   :root {
